# esdata

./: .dockerignore  .env.example  .gitignore  .lychee.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .tmp_verify_doc_artifacts.sqlite3  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMIT_MSG.txt  DEPLOY_CHECKLIST.md  Makefile  PROJECT_STATE.md  README.md  RELEASE-CLOSEOUT.md  RELEASE.md  SECURITY_BASELINE.md  STRUCTURE.md  alembic.ini  docker-compose.yml  env.example  esdata_prd_v1.md  prd-audit-20260520.json  prd.json  pre_commit_check.py  progress.txt  pyproject.toml  railway.toml  ruff.toml  skills-lock.json  verify_railway.py
.audit/: 00-EXECUTIVE-SUMMARY.md  01-db-schema-report.md  02-cron-workers-report.md  03-mcp-api-report.md  FINAL-EXECUTIVE-SUMMARY.md  POST-FIXES-EXECUTIVE-SUMMARY.md  _mcp-tools-schema.json  _sync_log-dump.csv  _tables-empty.txt  _tables-nonempty.txt  mcp_api_audit.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
_legacy/: check_216.py  check_accents.py  check_actual_data.py  check_api.py  check_art_schema.py  check_autoli.py  check_chunk.py  check_count.py  check_counts.py  check_facta_texts.py  check_fatca.py  check_final.py  check_fix.py  check_intl_data.py  check_irnr.py  check_irpf.py  check_leg.py  check_lgt.py  check_liva_art.py  check_liva_high.py  check_norma_base.py  check_norma_schema.py  check_normas.py  check_normas2.py  check_plainto.py  check_prefix.py  check_schema.py  (+71 more)
libs/python/esdata_common/: README.md  __init__.py  config.py  constants.py  db.py  http.py  logging.py  pyproject.toml  requirements.txt  vocabulary.py
(+1452 files in other folders)
