[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esdata-common"
version = "0.1.0"
description = "Shared utilities for ESData API and workers"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "sqlalchemy==2.0.43",
    "psycopg[binary]==3.2.9",
    "httpx==0.28.1",
]

[tool.setuptools]
packages = ["esdata_common"]

[tool.setuptools.package-dir]
esdata_common = "."
